세팅된 프로젝트 첫 커밋

--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,51 @@
 # Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
 
 # dependencies
-node_modules/
+/node_modules
+npm-debug.*
+yarn-debug.*
+yarn-error.*
+package-lock.json
 
-# Expo
+
+#expo
 .expo/
 dist/
 web-build/
 expo-env.d.ts
 
 # Native
+/android/build
+/android/app/build
+/android/.gradle
+/android/app/.cxx
+/android/.idea/
 .kotlin/
-*.orig.*
+
+#ios
+/ios/build
+/ios/Pods
+
+# Metro
+.metro-health-check*
+
+.DS_Store
+.idea/
+.vscode/
+*.iml
+Thumbs.db
+.orig.
+
+# api, ..
+.env*
+*.keystore
 *.jks
 *.p8
 *.p12
 *.key
 *.mobileprovision
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
 *.pem
 
-# local env files
-.env*.local
 
 # typescript
 *.tsbuildinfo
